# nopilot-co-studios

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint.yaml  CLAUDE.md  CONTEXT.md  LICENSE  README.md  install.sh  pyproject.toml  studios.yml  tools.yml
analytics/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
analytics/.claude-plugin/: plugin.json
analytics/commands/: analytics-studio.md
analytics/scripts/analytics/: __init__.py  analysis.py  cli.py  deps.py  store.py
analytics/skills/analyse-data/: SKILL.md
architecture/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
architecture/.claude-plugin/: plugin.json
architecture/commands/: architecture-studio.md
architecture/scripts/architecture/: __init__.py  adr.py  cli.py  deps.py  design_bridge.py  invariants.py  spec.py  store.py
architecture/skills/design-architecture/: SKILL.md
audience/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
audience/.claude-plugin/: plugin.json
audience/commands/: audience-studio.md
audience/scripts/audience/: __init__.py  cli.py  deps.py  nit_bridge.py  research.py  rubric.py  session.py  store.py
audience/skills/audience-critique/: SKILL.md
audience/skills/audience-research/: SKILL.md
audience/skills/persona-intake/: SKILL.md
audience/skills/psychographic-profile/: SKILL.md
audience/skills/scoring-rubric/: SKILL.md
commercial/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
commercial/.claude-plugin/: plugin.json
commercial/commands/: commercial-studio.md
commercial/configs/checks/: margin-floor.yaml  rate-card-compliance.yaml  ratio-mix.yaml
commercial/scripts/commercial/: __init__.py  checks.py  cli.py  deps.py  nit_bridge.py  session.py  store.py  value.py
commercial/skills/assess-commercial-value/: SKILL.md
commercial/skills/check-commercials/: SKILL.md
context-studio/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
context-studio/.claude-plugin/: plugin.json
context-studio/commands/: context-studio.md
context-studio/scripts/context/: __init__.py  bridge.py  cli.py  deps.py  pipeline.py  store.py
context-studio/skills/extend-context/: SKILL.md
context-studio/skills/ingest-context/: SKILL.md
context-studio/skills/map-context/: SKILL.md
delivery/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
delivery/.claude-plugin/: plugin.json
delivery/commands/: delivery-studio.md
delivery/scripts/delivery/: __init__.py  cli.py  deps.py  plan.py  raid.py  store.py
delivery/skills/plan-delivery/: SKILL.md
design/: .gitignore  Brewfile  CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
design/.claude-plugin/: plugin.json
design/commands/: design-studio.md
design/formats/: README.md  approach-gslide.yml  approach-html.yml  approach-pdf.yml  approach-pptx.yml  article-html.yml  pitch-glide.yml  pitch-gslide.yml  pitch-html.yml  pitch-pdf.yml  pitch-pptx.yml  pitch-revealjs.yml  post-html.yml  presentation-gslide.yml  presentation-html.yml  presentation-pdf.yml  presentation-pptx.yml  proposal-gslide.yml  proposal-html.yml  proposal-pdf.yml  proposal-uds-pdf.yml  report-gslide.yml  report-html.yml  report-pdf.yml  report-pptx.yml  showcase-html.yml  sow-html.yml  sow-pdf.yml  status-gslide.yml  status-html.yml  status-pdf.yml  status-pptx.yml  whitepaper-html.yml  whitepaper-pdf.yml
design/formats/assets/: anchor-link.yml  asset-embed.yml  author-attribution.yml  author-bio.yml  bullseye.yml  callout-panel.yml  contents.yml  cover-slide.yml  cover.yml  cta.yml  data-table.yml  data-viz.yml  decision-tree.yml  figure-caption.yml  flow-diagram.yml  funnel.yml  general-panel.yml  header-footer.yml  heatmap.yml  hierarchy-diagram.yml  highlight-panel.yml  kpi-tile.yml  matrix.yml  organigram.yml  precis.yml  process.yml  pullquote.yml  section-interstitial.yml  section-slide.yml  source-reference.yml  stat-panel.yml  swimlane.yml  timeline.yml
design/formats/exports/: glide.yml  gslide.yml  html.yml  pdf.yml  pptx.yml  revealjs.yml
design/formats/layouts/: README.md  frame.yml  linear.yml  uds.yml
design/formats/purposes/: approach.yml  article.yml  pitch.yml  post.yml  presentation.yml  proposal.yml  report.yml  showcase.yml  sow.yml  status.yml  whitepaper.yml
design/resources/: README.md
design/resources/brand-voice/: brand-voice-default.md
design/resources/design-systems/: design-pulse.md  design-yacht-club.md  design-zed.md  design.md
design/resources/iconography/: icons.md
design/runner/: README.md  app.py
design/scripts/studio/: __init__.py  archetype_ir.py  assets.py  brand.py  charts.py  cli.py  components.py  config.py  content.py  delivery.example.yml  deps.py  diagrams.py  docket.py  formats.py  frame_template.py  frameworks.py  gslide.py  hydrate.py  ingest.py  metacontent.py  pptx_render.py  qa.py  render.py  session.py  sync.py  tokens.py  uds.py  uds_html.py  uds_pdf.py  uuid_util.py  viz_data.py
design/skills/brand-ingest/: SKILL.md
design/skills/brand-pick/: SKILL.md
design/skills/render/: SKILL.md
design/skills/session-init/: SKILL.md
design/templates/: _brand.example.yml
design/uds/: README.md  archetypes.yml  aspect-classes.yml  data-patterns.yml  uds.yml
growth/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
growth/.claude-plugin/: plugin.json
growth/commands/: growth-studio.md
messaging/: CLAUDE.md  README.md  SPEC.md  install.sh  pyproject.toml  studio.yaml
messaging/.claude-plugin/: plugin.json
messaging/formats/: README.md  announcement-email.yml  announcement-linkedin.yml  followup-email.yml  nurture-email.yml  outreach-email.yml
messaging/resources/: README.md
motion/: Brewfile  CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
motion/.claude-plugin/: plugin.json
motion/commands/: motion-studio.md
motion/examples/: explainer-sample.storyboard.json
nitpicker/: CLAUDE.md  README.md  install.sh  pyproject.toml  studio.yaml
nitpicker/.claude-plugin/: plugin.json
nitpicker/commands/: nitpicker-studio.md
(+342 files in other folders)
