[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studios-planner"
version = "0.1.1"
description = "Composite-document planning + assembly orchestrator for the studios root plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.scripts]
planner = "planner.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["planner*"]

[tool.setuptools.package-data]
planner = ["schemas/*.json"]
