[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studios-orchestrators"
version = "0.2.0"
description = "Root-level orchestrators for the studios plugin — the planner (composite-document planning + assembly) and the engagement manifest (engagement-level state)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.scripts]
planner = "planner.cli:main"
engagement = "engagement.cli:main"
learnings = "learnings.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["planner*", "engagement*", "engagement.sor*", "learnings*"]

[tool.setuptools.package-data]
planner = ["schemas/*.json"]
engagement = ["schemas/*.json"]
learnings = ["schemas/*.json"]
