[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architecture-studio"
version = "0.1.0"
description = "Architecture orchestrator for the architecture-studio Claude Code plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.scripts]
arch = "architecture.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["architecture*"]

[tool.setuptools.package-data]
architecture = ["schemas/*.json"]
