[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commercial-studio"
version = "0.1.0"
description = "Commercial validation + value-based opportunity sizing orchestrator for the commercial-studio Claude Code plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.scripts]
commercial = "commercial.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["commercial*"]

[tool.setuptools.package-data]
commercial = ["schemas/*.json"]
