[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-studio"
version = "0.1.0"
description = "Infrastructural context orchestrator for the context-studio Claude Code plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.scripts]
context = "context.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["context*"]

[tool.setuptools.package-data]
context = ["schemas/*.json"]
