[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "design-studio"
version = "0.1.2"
description = "Brand-aware multi-format rendering orchestrator for the design-studio Claude Code plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "jsonschema>=4.21",
  "python-pptx>=1.0",
  "pypdfium2>=4.30",
  "pillow>=10.3",
  "click>=8.1",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45"]

[project.scripts]
studio = "studio.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["studio*"]

[tool.setuptools.package-data]
studio = ["schemas/*.json"]
