[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growth-studio"
version = "0.1.0"
description = "Growth/BD orchestrator for the growth-studio Claude Code plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.scripts]
growth = "growth.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["growth*"]

[tool.setuptools.package-data]
growth = ["schemas/*.json"]
