[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nitpicker-studio"
version = "0.1.1"
description = "Asset-review orchestrator for the nitpicker-studio Claude Code plugin"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Julian Tedstone", email = "ted@nopilot.co" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "click>=8.1",
]

[project.optional-dependencies]
# Visual capture backends. Text-only review (md/txt) needs none of these.
capture = [
  "pypdfium2>=4.0",  # PDF page rasterisation
  "pillow>=10.0",    # image handling for capture output
  "playwright>=1.40", # URL / HTML screenshots (also needs: playwright install chromium)
]

[project.scripts]
nit = "nit.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["nit*"]

[tool.setuptools.package-data]
nit = ["schemas/*.json"]
